--- a/HerokuDbConnector/HerokuDbConnector/HerokuDbConnector.csproj
+++ b/HerokuDbConnector/HerokuDbConnector/HerokuDbConnector.csproj
@@ -10,6 +10,7 @@
         <PackageLicenseUrl>https://raw.githubusercontent.com/Katarzyna-Kadziolka/HerokuDbConnector/main/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/Katarzyna-Kadziolka/HerokuDbConnector</RepositoryUrl>
         <PackageTags>Heroku, PostgreSQL</PackageTags>
+        <PackageVersion>1.0.0</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
